[metadata]
license=GPL v3
license_file=LICENSE.txt
platforms=any
description=An 'API' for meteoalarm.eu using the rss feeds.
long_description=file: README.md
keywords=meteoalarm.eu, API
classifier=
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules


[bdist_wheel]
universal=0


[nosetests]
verbosity=1
cover-package=meteoalarm_rssapi
where=meteoalarm_rssapi/test/


[pep257]
ignore=D203


[flake8]
ignore=N806,E721,W503
exclude=*/test/*
max-complexity=13


[codespell]
skip=_resources.py,test*
quiet-level=3
